blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  # Take a look at all the created Pods and find the Pod that has a label of "app: posts"
  replicas: 1
  selector:
    matchLabels:
      app: client
  # Specify the exact configuration of a Pod that we want the deployment to make 
  template:
    metadata:
      labels:
        app: client
    spec:
      containers: 
        - name: client
          image: tonyatlcs/client
# Config for ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
