blog/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  # Take a look at all the created Pods and find the Pod that has a label of "app: posts"
  replicas: 1
  selector:
    matchLabels:
      app: comments
  # Specify the exact configuration of a Pod that we want the deployment to make 
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers: 
        - name: comments
          image: tonyatlcs/comments
# Config for ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
