blog/infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  # Take a look at all the created Pods and find the Pod that has a label of "app: posts"
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  # Specify the exact configuration of a Pod that we want the deployment to make 
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers: 
        - name: event-bus
          image: tonyatlcs/event-bus
# Config for ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
