blog/infra/k8s/moderation-delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  # Take a look at all the created Pods and find the Pod that has a label of "app: posts"
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  # Specify the exact configuration of a Pod that we want the deployment to make 
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers: 
        - name: moderation
          image: tonyatlcs/moderation
# Config for ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
